--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	      <ul class="nav bg-light rounded ml-0 pl-0">	      	 					
 					<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Car Inventroy</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://webdev.scs.ryerson.ca/~mmtadeo/index.php">Merch Store</a></li> <!-- Martin (Merch Store, Product Pages, Checkout-->
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
