--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
 </script>
 </head>
 <body>	
-<!--	<div class="container">
-		<ul class="nav bg-dark">
-			<li class="nav-item"><a class="nav-link" href="#">asdf</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">asdf</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">asdf</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">asdf</a></li>
-		</ul>
-	</div>-->
 	<div class="container-fluid"> 		    
 <!--Navbar -->
 		<div id="firstRow" class="row">
@@ -46,8 +38,8 @@
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Museum</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="museum.html">Museum</a></li>
+					<li class="nav-item"><a class="nav-link" href="AboutUs.html">About</a></li>
 				</ul>
 	    </div>	   
 		</div>
