--- a/AboutUs.html
+++ b/AboutUs.html
@@ -28,18 +28,18 @@
 <!--newRow: Navbar -->
 		<div id="newRow-navbar" class="row">
 			<div class="col-md-2 col-lg-2 mr-0 pr-0">
-				<a href="#"><img class="logo" src="images/logo.png"></a>
+				<a href="https://csp530projectgroup2.github.io/main_page"><img class="logo" src="images/logo.png"></a>
 			</div>
 			<div class="col-md-10 col-lg-10 align-baseline mt-4 ml-0 pl-0">						
 	      <ul class="nav bg-light rounded ml-0 pl-0">	      	 					
-					<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Car Inventroy</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Museum</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="museum.html">Museum</a></li>
+					<li class="nav-item"><a class="nav-link" href="AboutUs.html">About</a></li>
 				</ul>
 	    </div>	   
 		</div>						
