--- a/AboutUs.html
+++ b/AboutUs.html
@@ -38,8 +38,8 @@
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="museum.html">https://csp530projectgroup2.github.io/main_page/museum.html</a></li>
-					<li class="nav-item"><a class="nav-link" href="AboutUs.html">https://csp530projectgroup2.github.io/main_page/AboutUs.html</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/museum.html">museum</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a></li>
 				</ul>
 	    </div>	   
 		</div>						
