--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
 					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/museum.html">Museum</a></li>
-					<li class="nav-item"><a class="nav-link" href="AboutUs.html">https://csp530projectgroup2.github.io/main_page/AboutUs.html</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a></li>
 				</ul>
 	    </div>	   
 		</div>
