--- a/index.html
+++ b/index.html
@@ -26,23 +26,29 @@
 <body>	
 	<div class="container-fluid"> 		    
 <!--Navbar -->
-		<div id="firstRow" class="row">
-			<div class="col-md-2 col-lg-2 mr-0 pr-0">
-				<a href="https://csp530projectgroup2.github.io/main_page/index.html"><img src="images/logo.png"></a>
-			</div>
-			<div class="col-md-10 col-lg-10 align-baseline mt-4 ml-0 pl-0">						
-	      <ul class="nav bg-light rounded ml-0 pl-0">	      	 					
-					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/index.html">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Car Inventroy</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">placeholder</a></li>
-					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/museum.html">Museum</a></li>
-					<li class="nav-item"><a class="nav-link" href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a></li>
-				</ul>
-	    </div>	   
-		</div>
+        <header>
+            <div class="content-wrapper">
+		<h1><img src="imgs/logo.png" width="64" height="64" style="position:relative; top:10px; right:10px;"/>Autobahn Luxuries Inc.</h1>
+                <nav>
+                    <a href="https://csp530projectgroup2.github.io/main_page/index.html">Home</a>
+                    <a href="https://csp530projectgroup2.github.io/main_page/museum.html">Museum</a>
+                    <a href="http://webdev.scs.ryerson.ca/~n5bautis/auction.php">Auction</a>
+                    <a href="index.php">Recent Products</a>
+                    <a href="index.php?page=products">All Products</a>
+                    <a href="https://www.cs.ryerson.ca/~r89sharm/project/design/">Design Workspace</a>
+                    <a href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a>
+                    <a href="https://www.cs.ryerson.ca/~r89sharm/project/contact.php">Contact Us</a>
+
+
+                </nav>
+                <div class="link-icons">
+                    <a href="index.php?page=cart">
+						<i class="fas fa-shopping-cart"></i> <span>$num_items_in_cart</span>
+					</a>
+                </div>
+            </div>
+        </header>
+
 <!--COver -->
 		<div id="secondRow" class="row">
 			<div class="col-md-12 col-lg-12 mr-0 pr-0">					
