--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Us</title>
 <!-- CSS external file -->
-<link rel="stylesheet" href="museum.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" >	
+<link rel="stylesheet" href="AboutUs.css">
 <!-- enabling bootstrap 4 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
