--- a/AboutUs.html
+++ b/AboutUs.html
@@ -38,7 +38,7 @@
 				    <a href="http://webdev.scs.ryerson.ca/~mmtadeo/index.php">Merchandise</a>
 				    <a href="https://www.cs.ryerson.ca/~r89sharm/project/design/">Design Workspace</a>
 				    <a href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a>
-				    <a href="https://www.cs.ryerson.ca/~r89sharm/project/contact.php">Contact Us</a>
+				    <a href="https://www.cs.ryerson.ca/~r89sharm/project/contact/contact.php">Contact Us</a>
 
 
 				</nav>
@@ -56,7 +56,7 @@
 		</div>	
 <!--newRow: subtitle -->
 		<div id="newRow-subtitle" class="row">
-			<p class="pl-5 pr-5 text-danger" style="font-size: 20px;">AutoBahn's century-old proud tradition of car-collecting
+			<p class="pl-5 pr-5" style="font-size: 20px;">AutoBahn's century-old proud tradition of car-collecting
 				has lead to a vast assemblage of cars. Our founders devoted 
 				themselves into creating this museum started back in the 1920s. As a result, today we have one of the biggest car museums in the entire world. This museum houses collections from Peugeot-1890 models to the Lamborghini Huracan STO, from General Motor's EV1 to the Tesla Roadster. We pride ourselves in our colloection of vehicles and continue our founders' legacy by continuing on our quest for the latest and greatest in the field of automotives. 
 				Our expertise is in the finding the rarest of what the automotive industry has to offer and adding it to our prized collection. We also use said expertise to help our clients find their dream vehicle for the right price. 
@@ -64,7 +64,12 @@
 				We believe that cars are something to be showcased and admired, not locked away collecting dust in a rich hedge-fund manager's garage. So, all our cars are showcased in our Atlanta, Georgia Car museum, which is open to the public for viewing. Right next to the museum is our private track, where we allow the public a change to ride some of our more interesting automotives so everyone can have a chance to <b>experience</b> history.
 				Lastly, Don't Forget to check out our extensive car inventory on the website and at a location close to you. After all, we are still car dealers.
 			</p>
-		</div>											
+		</div>	
+		<div id="newRow-imgs" class="row">
+			<img src=""><br>
+			<img src=""><br>
+			
+		</div>	
 	</div>	
 	<footer>
             <div class="content-wrapper">
