--- a/AboutUs.html
+++ b/AboutUs.html
@@ -66,8 +66,8 @@
 			</p>
 		</div>	
 		<div id="newRow-imgs" class="row">
-			<img src=""><br>
-			<img src=""><br>
+			<img src="images/img1.jpg"><br>
+			<img src="images/img1.jpg" class="ml-5"><br>
 			
 		</div>	
 	</div>	
