--- a/AboutUs.html
+++ b/AboutUs.html
@@ -68,7 +68,9 @@
 		<div id="newRow-imgs" class="row">
 			<img src="images/img1.jpg"><br>
 			<img src="images/img1.jpg" class="ml-5"><br>
-			
+			<img src="images/img1.jpg" class="ml-5"><br>
+			<img src="images/img1.jpg" class="ml-5"><br>
+			<img src="images/img1.jpg" class="ml-5"><br>
 		</div>	
 	</div>	
 	<footer>
