--- a/museum.html
+++ b/museum.html
@@ -6,6 +6,7 @@
 <title>Museum</title>
 <!-- CSS external file -->
 <link rel="stylesheet" href="museum.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" >	
 <!-- enabling bootstrap 4 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
