--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" >	
 <title>Home Page</title>
 <!-- enabling bootstrap 4 -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -65,5 +66,10 @@
 				<p>Note: we recently changed our company logo to the flux capacitor, as our honoring of changing times and the company's ascent to the future.</p></b>
 			</div>
 		</div>
+	<footer>
+            <div class="content-wrapper">
+                <p>&copy; $year, Autobahn Luxuries Inc.</p>
+            </div>
+        </footer>
 </body>
 </html>
