--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     <a href="https://csp530projectgroup2.github.io/main_page/index.html">Home</a>
                     <a href="https://csp530projectgroup2.github.io/main_page/museum.html">Museum</a>
                     <a href="http://webdev.scs.ryerson.ca/~n5bautis/auction.php">Auction</a>
-                    <a href="index.php">Recent Products</a>
-                    <a href="index.php?page=products">All Products</a>
+                    <a href="http://webdev.scs.ryerson.ca/~mmtadeo/index.php">Merchandise</a>
                     <a href="https://www.cs.ryerson.ca/~r89sharm/project/design/">Design Workspace</a>
                     <a href="https://csp530projectgroup2.github.io/main_page/AboutUs.html">About Us</a>
                     <a href="https://www.cs.ryerson.ca/~r89sharm/project/contact/contact.php">Contact Us</a>
