--- a/museum.html
+++ b/museum.html
@@ -137,7 +137,7 @@
 	</div>	
 	<footer>
             <div class="content-wrapper">
-                <p>&copy; $year, Autobahn Luxuries Inc.</p>
+                <p>&copy; 2020, Autobahn Luxuries Inc.</p>
             </div>
         </footer>
 </body>
