--- a/museum.html
+++ b/museum.html
@@ -71,7 +71,7 @@
 			<!-- indicators -->
 			<div id="indicators">
 				<ul class="carousel-indicators">
-					<li data-target="#newRow-carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#newRow-carousel" data-slide-to="0" class="active" ></li>
 					<li data-target="#newRow-carousel" data-slide-to="1"></li>				
 					<li data-target="#newRow-carousel" data-slide-to="2"></li>					
 					<li data-target="#newRow-carousel" data-slide-to="3"></li>				
@@ -119,10 +119,10 @@
 			<!-- arrows-->
 			<div>								
 				<a class="carousel-control-prev" href="#newRow-carousel" data-slide="prev">
-					<div class="carousel-control-prev-icon"></div>
+					<div class="carousel-control-prev-icon bg-secondary"></div>
 				</a>
 				<a class="carousel-control-next" href="#newRow-carousel" data-slide="next">
-					<div class="carousel-control-next-icon"></div>
+					<div class="carousel-control-next-icon bg-secondary"></div>
 				</a>
 			</div>
 		</div>		
