--- a/museum.html
+++ b/museum.html
@@ -71,13 +71,13 @@
 			<!-- indicators -->
 			<div id="indicators">
 				<ul class="carousel-indicators">
-					<li data-target="#newRow-carousel" data-slide-to="0" class="active" ></li>
-					<li data-target="#newRow-carousel" data-slide-to="1"></li>				
-					<li data-target="#newRow-carousel" data-slide-to="2"></li>					
-					<li data-target="#newRow-carousel" data-slide-to="3"></li>				
-					<li data-target="#newRow-carousel" data-slide-to="4"></li>					
-					<li data-target="#newRow-carousel" data-slide-to="5"></li>				
-					<li data-target="#newRow-carousel" data-slide-to="6"></li>																	
+					<li data-target="#newRow-carousel" data-slide-to="0" class="active bg-secondary" ></li>
+					<li data-target="#newRow-carousel" data-slide-to="1" class="bg-secondary"></li>				
+					<li data-target="#newRow-carousel" data-slide-to="2" class="bg-secondary"></li>					
+					<li data-target="#newRow-carousel" data-slide-to="3" class="bg-secondary"></li>				
+					<li data-target="#newRow-carousel" data-slide-to="4" class="bg-secondary"></li>					
+					<li data-target="#newRow-carousel" data-slide-to="5" class="bg-secondary"></li>				
+					<li data-target="#newRow-carousel" data-slide-to="6" class="bg-secondary"></li>																	
 				</ul>
 			</div>
 			<!-- actual slides-->
