--- a/AboutUs.html
+++ b/AboutUs.html
@@ -40,7 +40,7 @@
 				</nav>
 				<div class="link-icons">
 				    <a href="http://webdev.scs.ryerson.ca/~mmtadeo/index.php?page=cart">
-					<i class="fas fa-shopping-cart"></i> <span>$num_items_in_cart</span>
+					
 				    </a>
 				</div>
 			    </div>
@@ -65,17 +65,11 @@
 				Lastly, Don't Forget to check out our extensive car inventory on the website and at a location close to you. After all, we are still car dealers.
 			</p>
 		</div>	
-		<div id="newRow-imgs" class="row">
-			<img src="images/img1.jpg"><br>
-			<img src="images/img1.jpg" class="ml-5"><br>
-			<img src="images/img1.jpg" class="ml-5"><br>
-			<img src="images/img1.jpg" class="ml-5"><br>
-			<img src="images/img1.jpg" class="ml-5"><br>
-		</div>	
+
 	</div>	
 	<footer>
             <div class="content-wrapper">
-                <p>&copy; $year, Autobahn Luxuries Inc.</p>
+                <p>&copy; 2020, Autobahn Luxuries Inc.</p>
             </div>
         </footer>
 </body>
