--- a/AboutUs.html
+++ b/AboutUs.html
@@ -26,7 +26,7 @@
 <body>	
 <header>
 			    <div class="content-wrapper">
-				<h1><img src="imgs/logo.png" width="64" height="64" style="position:relative; top:10px; right:10px;"/>Autobahn Luxuries Inc.</h1>
+				<h1><img src="imgs/logo.png" width="64" height="64" style="position:relative; right:10px;"/>Autobahn Luxuries Inc.</h1>
 				<nav>
 				    <a href="https://csp530projectgroup2.github.io/main_page/index.html">Home</a>
 				    <a href="https://csp530projectgroup2.github.io/main_page/museum.html">Museum</a>
