--- a/museum.html
+++ b/museum.html
@@ -84,36 +84,34 @@
 			<div class="carousel-inner">				
 				<div class="carousel-item active">
 					<img src="images/carousel-images/img1.jfif" alt="img" width="350px" height="80px">
-					<p> We have been collecting cars worldwide and have deep appreciation for the history<br>
-					the regor of the designers of rare vehicles. </p>
+					<p class="mt-2"> We have over one hunderd years of car collecting experience under our belt.</p>
 				</div>
 				<div class="carousel-item">
 					<img src="images/carousel-images/img2.jfif" alt="img" width="350px" height="80px">
-					<p>Our collection is praised across all motorsport organizations and was recently praised by<br>
-					NASCAR as a priceless jewel of auto-sport industry. </p>
+					<p class="mt-2">Our museum contains relics from many famous international motor-sports events like NASCAR and Formula1</p>
 				</div>
 				<div class="carousel-item">
 					<img src="images/carousel-images/img3.jpg" alt="img" width="350px" height="80px">
-					<p>We house irreplacable vehicles soaked in history, like these precious WWII jeeps. </p>
+					<p class="mt-2">We house irreplacable vehicles soaked in history, like these precious WWII jeeps. </p>
 				</div>
 				<div class="carousel-item">
 					<img src="images/carousel-images/img4.jfif" alt="img" width="350px" height="80px">
-					<p>Our vehicles are regularly inspected for quality and many are in mint condition. Many<br>
+					<p class="mt-2">Our vehicles are regularly inspected for quality and many are in mint condition. Many<br>
 					of our vehicles are also functional! Try one of our sportier pieces on a ride around our
 				  private tracks.</p>
 				</div>
 				<div class="carousel-item">
 					<img src="images/carousel-images/img5.jfif" alt="img" width="350px" height="80px">
-					<p>join our seminars to learn of the history of cars starting from 1890s to the present<br>
+					<p class="mt-2">join us in one of our seminars to learn about the history of the automotive industry from  1890s to present.<br>
 					Find out where the car industry is headed with our leading automotive experts.</p>
 				</div>
 				<div class="carousel-item">
 					<img src="images/carousel-images/img6.jfif" alt="img" width="350px" height="80px">
-					<p>Vintigify your car into a 1960s ferrari- talk to our on-site experts for a free consultation.</p>
+					<p class="mt-2">Vintigify your car into a 1960s ferrari- talk to our on-site experts for a free consultation.</p>
 				</div>	
 				<div class="carousel-item">
 					<img src="images/carousel-images/img7.jfif" alt="img" width="350px" height="80px">
-					<p>Our vast museum is divided into different sections based on the brands.</p>
+					<p class="mt-2">Our vast museum is divided into different sections based on the car brands.</p>
 				</div>			
 			</div>		
 			<!-- arrows-->
