--- a/museum.html
+++ b/museum.html
@@ -110,7 +110,7 @@
 					<p class="mt-2">Vintigify your car into a 1960s ferrari- talk to our on-site experts for a free consultation.</p>
 				</div>	
 				<div class="carousel-item">
-					<img src="https://images.hgmsites.net/hug/gosford-classic-car-museum_100696990_h.jpg" alt="img" width="550px" height="80px">
+					<img src="https://images.hgmsites.net/hug/gosford-classic-car-museum_100696990_h.jpg" alt="img">
 					<p class="mt-2">Our vast museum is divided into different sections based on the car brands.</p>
 				</div>			
 			</div>		
