--- a/AboutUs.html
+++ b/AboutUs.html
@@ -49,18 +49,34 @@
 <!--newRow: Navbar -->
 		<div id="newRow-navbar" class="row">
 			 
-		</div>						
+		</div>				
+<!--newRow: Title -->
+	  <div id="newRow-title" class="row">
+	  	<h1 class="display-1"><b>-</b>Our Mission Statement<b>-</b></h1>
+		</div>	
+<!--newRow: subtitle -->
+		<div id="newRow-subtitle" class="row">
+			<p class="pl-5 pr-5" style="font-size: 20px; color: lightgrey;">
+				To preserve the history of the automotive industry and pave the future of cars into the 21st century.
+			</p>
+		</div>	
+
+		
 <!--newRow: Title -->
 	  <div id="newRow-title" class="row">
 	  	<h1 class="display-1">About Us</h1>
 		</div>	
 <!--newRow: subtitle -->
 		<div id="newRow-subtitle" class="row">
-			<p class="pl-5 pr-5" style="font-size: 20px;">AutoBahn's century-old proud tradition of car-collecting
-				has lead to a vast assemblage of cars. Our founders devoted 
-				themselves into creating this museum started back in the 1920s. <br>As a result, today we have one of the biggest car museums in the entire world. This museum houses collections from Peugeot-1890 models to the Lamborghini Huracan STO, from General Motor's EV1 to the Tesla Roadster. We pride ourselves in our colloection of vehicles and continue our founders' legacy by continuing on our quest for the latest and greatest in the field of automotives. 
+			<p class="pl-5 pr-5" style="font-size: 20px; color: lightgrey;">AutoBahn's century-old proud tradition of car-collecting
+				has lead to a vast assemblage of cars. Our founders devoted themselves into creating this museum started back in the 1920s.
+			<br>As a result, today we have one of the biggest car museums in the entire world. This museum houses collections from Peugeot-1890 
+				models to the Lamborghini Huracan STO, from General Motor's EV1 to the Tesla Roadster. We pride ourselves in our colloection of vehicles 
+				and continue our founders' legacy by continuing on our quest for the latest and greatest in the field of automotives. 
+			<br>
 				Our expertise is in the finding the rarest of what the automotive industry has to offer and adding it to our prized collection. <br>We also use said expertise to help our clients find their dream vehicle for the right price. 
 				We also host car auctions from time to time, to which all interested members of public are allowed tickets to. (Contact us for more details)
+			<br>
 				We believe that cars are something to be showcased and admired, not locked away collecting dust in a rich hedge-fund manager's garage. So, all our cars are showcased in our Atlanta, Georgia Car museum, which is open to the public for viewing. Right next to the museum is our private track, where we allow the public a change to ride some of our more interesting automotives so everyone can have a chance to <b>experience</b> history.
 				Lastly, Don't Forget to check out our extensive car inventory on the website and at a location close to you. After all, we are still car dealers.
 			</p>
