--- a/AboutUs.html
+++ b/AboutUs.html
@@ -52,11 +52,11 @@
 		</div>				
 <!--newRow: Title -->
 	  <div id="newRow-title" class="row">
-	  	<h1 class="display-1"><b>-</b>Our Mission Statement<b>-</b></h1>
+	  	<h1 class="display-1"><b class="display-1">-</b>Our Mission Statement<b class="display-1">-</b></h1>
 		</div>	
 <!--newRow: subtitle -->
 		<div id="newRow-subtitle" class="row">
-			<p class="pl-5 pr-5" style="font-size: 20px; color: lightgrey;">
+			<p class="pl-5 pr-5" style="font-size: 20px; color: grey;">
 				To preserve the history of the automotive industry and pave the future of cars into the 21st century.
 			</p>
 		</div>	
@@ -68,7 +68,7 @@
 		</div>	
 <!--newRow: subtitle -->
 		<div id="newRow-subtitle" class="row">
-			<p class="pl-5 pr-5" style="font-size: 20px; color: lightgrey;">AutoBahn's century-old proud tradition of car-collecting
+			<p class="pl-5 pr-5" style="font-size: 20px; color: grey;">AutoBahn's century-old proud tradition of car-collecting
 				has lead to a vast assemblage of cars. Our founders devoted themselves into creating this museum started back in the 1920s.
 			<br>As a result, today we have one of the biggest car museums in the entire world. This museum houses collections from Peugeot-1890 
 				models to the Lamborghini Huracan STO, from General Motor's EV1 to the Tesla Roadster. We pride ourselves in our colloection of vehicles 
