--- a/AboutUs.html
+++ b/AboutUs.html
@@ -63,7 +63,7 @@
 
 		
 <!--newRow: Title -->
-	  <div id="newRow-title" class="row">
+	  <div id="newRow-title" class="row mt-4">
 	  	<h1 class="display-1">About Us</h1>
 		</div>	
 <!--newRow: subtitle -->
