--- a/museum.html
+++ b/museum.html
@@ -108,7 +108,7 @@
 					<p>Vintigify your car into a 1960s ferrari- talk to our on-site experts for a free consultation.</p>
 				</div>	
 				<div class="carousel-item">
-					<img src="https://images.hgmsites.net/hug/gosford-classic-car-museum_100696990_h.jpg" alt="img" class="ml-2 mt-2" style="width: 500px; height: 350px;">
+					<img src="https://images.hgmsites.net/hug/gosford-classic-car-museum_100696990_h.jpg" alt="img" style="width: 500px; height: 350px; margin-left: 75%; margin-top: 40%;">
 					<p>Our vast museum is divided into different sections based on the car brands.</p>
 				</div>			
 			</div>		
