--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</div>
 		<div id="thirdRow" class="row">
 			<div class="col-md-12 col-lg-12 mr-0 pr-0">
-				<img src="images/logofull.png">
+				<img src="images/home.jpg">
 			</div>
 		</div>
 	</div>
