--- a/index.html
+++ b/index.html
@@ -47,15 +47,12 @@
         </header>
 
 <!--COver -->
-		<div id="secondRow" class="row">
-			<div class="col-md-12 col-lg-12 mr-0 pr-0">					
-			</div>				  		
-		</div>
-		<div id="thirdRow" class="row">
-			<div class="col-md-12 col-lg-12 mr-0 pr-0">
-				<img src="images/home.jpg">
-			</div>
-		</div>
+	<div class="content-wrapper container">
+   		<div class="featured"></div>
+	</div>
+
+						  		
+		
 	</div>
 	<div id="fourthRow" class="row">
 			<div class="col-md-12 col-lg-12 mr-0 pr-0">
