--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </header>
 
 <!--COver -->
-	<div class="content-wrapper container">
+	<div class="content-wrapper">
    		<div class="featured"></div>
 	</div>
 
