--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 						  		
 		
 	</div>
-	<div id="fourthRow" class="row">
+	<div class="content-wrapper">
 			<div class="col-md-12 col-lg-12 mr-0 pr-0">
 				<b><h1>Welcome to Autobahn Luxuries Inc.</h1>
 				<p>Feel free to explore our website and our many services.<br>			
-				<p>Note: we recently changed our company logo to the flux capacitor, as our honoring of changing times and the company's ascent to the future.</p></b>
+				<p>Note: We recently changed our company logo to the flux capacitor, as our honoring of changing times and the company's ascent to the future.</p></b>
 			</div>
 		</div>
 	<footer>
