--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	</div>
 	<div class="content-wrapper">
 			<div class="col-md-12 col-lg-12 mr-0 pr-0">
-				<b><h1>Welcome to Autobahn Luxuries Inc.</h1>
-				<p>Feel free to explore our website and our many services.<br>			
-				<p>Note: We recently changed our company logo to the flux capacitor, as our honoring of changing times and the company's ascent to the future.</p></b>
+				<b><h1 text-align:center>Welcome to Autobahn Luxuries Inc.</h1>
+				<p text-align:center>Feel free to explore our website and our many services.<br>			
+				<p text-align:center>Note: We recently changed our company logo to the flux capacitor, as our honoring of changing times and the company's ascent to the future.</p></b>
 			</div>
 		</div>
 	<footer>
