--- a/museum.html
+++ b/museum.html
@@ -128,7 +128,7 @@
 		</div><br><br>
 <!--newRow: tickets: button -->
 		<div id="newRow-ticket_button" class="row">
-			<button class="btn btn-primary"><a href="https://www.cs.ryerson.ca/~r89sharm/project/contact/contact.php">CONTACT US</a></button>
+			<button class="btn btn-secondary"><a href="https://www.cs.ryerson.ca/~r89sharm/project/contact/contact.php">CONTACT US</a></button>
 		</div>									
 	</div>	
 	<footer>
