--- a/AboutUs.html
+++ b/AboutUs.html
@@ -81,7 +81,12 @@
 				Lastly, Don't Forget to check out our extensive car inventory on the website and at a location close to you. After all, we are still car dealers.
 			</p>
 		</div>	
-
+<!--newRow: Title -->
+	  <div class="row mt-4">
+	  	<img class="mr-4" src="https://i.ytimg.com/vi/wEBJjU_TpXw/maxresdefault.jpg" style="width: 40%; height: 40%;">	
+			<img src="https://i.ytimg.com/vi/wEBJjU_TpXw/maxresdefault.jpg" style="width: 40%; height: 40%;">	
+		</div>			
+		
 	</div>	
 	<footer>
             <div class="content-wrapper">
