--- a/AboutUs.html
+++ b/AboutUs.html
@@ -83,8 +83,8 @@
 		</div>	
 <!--newRow: Title -->
 	  <div class="row mt-4">
-	  	<img class="mr-4" src="https://i.ytimg.com/vi/wEBJjU_TpXw/maxresdefault.jpg" style="width: 40%; height: 40%;">	
-			<img src="https://i.ytimg.com/vi/wEBJjU_TpXw/maxresdefault.jpg" style="width: 40%; height: 40%;">	
+	  	<img src="images/AboutUsimg.jpg" style="width: 40%; height: 40%; margin-right:40%;">	
+			<img src="images/AboutUsimg2.jpg" style="width: 40%; height: 40%;">	
 		</div>			
 		
 	</div>	
