--- a/museum.html
+++ b/museum.html
@@ -68,7 +68,7 @@
 		<div id="newRow-carousel" class="row carousel slide" data-ride="carousel">
 			<!-- indicators -->
 			<div id="indicators">
-				<ul class="carousel-indicators">
+				<ul class="carousel-indicators" style="margin-top: 900px">
 					<li data-target="#newRow-carousel" data-slide-to="0" class="active bg-secondary" ></li>
 					<li data-target="#newRow-carousel" data-slide-to="1" class="bg-secondary"></li>				
 					<li data-target="#newRow-carousel" data-slide-to="2" class="bg-secondary"></li>					
@@ -123,7 +123,7 @@
 			</div>
 		</div>		
 <!--newRow: tickets: subtitle -->
-		<div id="newRow-ticket_subtitle" class="row">
+		<div id="newRow-ticket_subtitle" class="row" style="margin-top: 1000px">
 			<h3>Contact us for more details<br> on the tickets to our museum:</h3>
 		</div><br><br>
 <!--newRow: tickets: button -->
